[tool.poetry]
name = "simulation_tracker"
version = "0.1.0"
description = "Tool to keep track of data provenience for simulations and data workflows."
readme = "README.md"
authors = ["PStaerk <pstaerk@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
